--- a/Quiz/Properties/Resources.resx
+++ b/Quiz/Properties/Resources.resx
@@ -130,4 +130,7 @@
   <data name="BackImage" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\BackImage.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="thinkPerson" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\thinkPerson.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
