--- a/Quiz/Properties/Resources.resx
+++ b/Quiz/Properties/Resources.resx
@@ -124,9 +124,6 @@
   <data name="returnpcbox" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\returnpcbox.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="greenhuman" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\greenhuman.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="PercentImage1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PercentImage1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -139,14 +136,20 @@
   <data name="thinkPerson2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\thinkPerson2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="thinkPerson" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\thinkPerson.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="greenhuman" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\greenhuman.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="bluecorrect" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bluecorrect.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ownanswer" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ownanswer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="thinkPerson" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\thinkPerson.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pppercent" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pppercent.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="percentcircle" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\percentcircle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -160,7 +163,7 @@
   <data name="PercentImage11" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PercentImage11.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="pppercent" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\pppercent.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="add" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\add.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
