--- a/Quiz/Properties/Resources.resx
+++ b/Quiz/Properties/Resources.resx
@@ -130,11 +130,23 @@
   <data name="PercentImage1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PercentImage1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="correctanswer" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\correctanswer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="thinkPerson1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\thinkPerson1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="keywhite" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\keywhite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="thinkPerson2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\thinkPerson2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="MessageBox" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MessageBox.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="mswhite" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\mswhite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="trashbox" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\trashbox.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -145,8 +157,14 @@
   <data name="bluecorrect" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bluecorrect.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="green-wallpaper-12" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\green-wallpaper-12.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="ownanswer" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ownanswer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Key" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Key.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="thinkPerson" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\thinkPerson.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -160,22 +178,25 @@
   <data name="pppercent" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pppercent.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="messagegreen" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\messagegreen.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="percentcircle" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\percentcircle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="correctanswer" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\correctanswer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="PercentImage11" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\PercentImage11.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="percentcircle1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\percentcircle1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="PercentImage" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PercentImage.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="green-wallpaper-12" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\green-wallpaper-12.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="percentcircle1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\percentcircle1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="PercentImage11" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\PercentImage11.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="keygreen" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\keygreen.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="msnewwhite" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\msnewwhite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
